k8s_deployments/blog/modsecurity-servicelayers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:
  replicas: 3
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
        - name: modsecurity
          image: owasp/modsecurity-crs:v3.2-modsec2-apache
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwworigin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wwworigin
  template:
    metadata:
      labels:
        app: wwworigin
    spec:
      containers:
        - name: microsimserver
          image: kellybrazil/microsimserver
          ports:
            - containerPort: 8080
        - name: microsimclient
          image: kellybrazil/microsimclient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: modsecurity
          image: owasp/modsecurity-crs:v3.2-modsec2-apache
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorigin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: authorigin
  template:
    metadata:
      labels:
        app: authorigin
    spec:
      containers:
        - name: microsimserver
          image: kellybrazil/microsimserver
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: modsecurity
          image: owasp/modsecurity-crs:v3.2-modsec2-apache
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dborigin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dborigin
  template:
    metadata:
      labels:
        app: dborigin
    spec:
      containers:
        - name: microsimserver
          image: kellybrazil/microsimserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
  name: www
spec:
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: www
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: auth
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: db
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wwworigin
  name: wwworigin
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: wwworigin
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authorigin
  name: authorigin
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: authorigin
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dborigin
  name: dborigin
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: dborigin
  sessionAffinity: None
