k8s_deployments/blog/sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:
  replicas: 3
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
        - name: modsecurity
          image: owasp/modsecurity-crs:v3.2-modsec2-apache
          ports:
            - containerPort: 80
        - name: microsimserver
          image: kellybrazil/microsimserver
        - name: microsimclient
          image: kellybrazil/microsimclient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: modsecurity
          image: owasp/modsecurity-crs:v3.2-modsec2-apache
          ports:
            - containerPort: 80
        - name: microsimserver
          image: kellybrazil/microsimserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: modsecurity
          image: owasp/modsecurity-crs:v3.2-modsec2-apache
          ports:
            - containerPort: 80
        - name: microsimserver
          image: kellybrazil/microsimserver
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
  name: www
spec:
  externalTrafficPolicy: Local
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: www
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: auth
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: db
  sessionAffinity: None
