k8s_deployments/blog/istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: www-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: www-vservice
spec:
  hosts:
  - "*"
  gateways:
  - www-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 8080
        host: www.default.svc.cluster.local
